--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ button.btn:hover {
 
 .brand .b-logo a img {
     max-width: 100%;
-    max-height: 130px;
+    height: auto;
 }
 
 .brand .b-ads {
@@ -245,7 +245,7 @@ button.btn:hover {
 
 @media (min-width: 768px) {
     .brand {
-        max-height: 130px;
+        height: auto;
     }
 }
 
