--- a/assets/css/affiliate-overlay.css
+++ b/assets/css/affiliate-overlay.css
@@ -289,9 +289,8 @@
     }
     
     .affiliate-close-btn {
-        width: 35px;
-        height: 35px;
-        font-size: 20px;
+        width: 40px;
+        height: 40%;
     }
 }
 
